--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./",
-    "dev": " NODE_ENV=production DEBUG=wellxiao:* node ./"
+    "dev": "NODE_ENV=production node ./",
+    "debug":"NODE_ENV=production DEBUG=wellxiao:* node ./"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -19,6 +20,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "mysql2": "^1.5.1",
+    "nodejs-websocket": "^1.7.1",
     "path": "^0.12.7",
     "sequelize": "^4.32.1",
     "serve-favicon": "~2.4.5",
